# pmetal-midi

./: .cursorrules  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
config/: default.yaml  shreddage.yaml
docs/: DEPLOYMENT.md  GUIDE.md  GUIDE_RU.md  USAGE.md
scripts/: configure_claude.py  download_models.sh  entrypoint.sh
src/pmetal/: __init__.py  __main__.py  analyzer.py  articulation_overlay.py  cli.py  config.py  exceptions.py  mcp_server.py  merger.py  models.py  orchestrator.py  postprocess.py  quality_analyzer.py  security.py  status_server.py  utils.py
tests/: conftest.py  test_analyzer.py  test_mcp.py  test_merger.py  test_orchestrator.py  test_overlay.py  test_quality.py
